--- a/pages/fancy-robot.html
+++ b/pages/fancy-robot.html
@@ -46,8 +46,8 @@
         <div class="robot-hair-one"></div>
         <div class="robot-hair-two"></div>
         <div class="robot-hair-three"></div>
-        <div class="robot-hair-two"></div>
-        <div class="robot-hair-one"></div>
+        <div class="robot-hair-four"></div>
+        <div class="robot-hair-five"></div>
       </div>
     </div>
   </body>
